# single-pyrouserbot-example

./: .gitignore  README.md  app.py  pyproject.toml  settings.env.example
core/: func.py  loader.py  settings.py
core/data/: tricks.py
core/filters/: __init__.py
core/handlers/: __init__.py  ping.py
core/service/: loop_task.py
core/utils/db_api/: database.py  repo.py
